# vec_parallel

./: Cargo.toml  LICENSE-MIT.md  NOTICE  README.md
.github/workflows/: ci.yaml
src/: lib.rs
