[package]
name = "vec_parallel"
version = "0.1.0"
edition = "2021"

[dependencies]
atomic-waker = "1.1.2"
num_cpus = "1.16.0"
#some_executor = {path = "../some_executor", optional = true}
some_executor = {version = "0.3.0", optional = true}

[dev-dependencies]
test_executors = "0.3.2"
#test_executors = {path = "../test_executors"}
# wasm support

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3.45"


[features]
some_executor = ["dep:some_executor"]