[package]
name = "vec_parallel"
version = "0.1.2"
edition = "2024"

authors = ["Drew Crawford <drew@sealedabstract.com>"]
description = "Construct your Vec in parallel"
repository = "https://github.com/drewcrawford/vec_parallel"
homepage = "https://sealedabstract.com/code/vec_parallel"
categories = ["asynchronous", "concurrency"]
license = "MIT OR Apache-2.0"
keywords = ["parallel", "rayon", "multithreading", "vec", "vector"]
exclude = [".*"]
rust-version = "1.85.1"

[dependencies]
atomic-waker = "1.1.2"
num_cpus = "1.16"
some_executor = {version = "0.5", optional = true}

[dev-dependencies]
test_executors = "0.3"
# wasm support

[target.'cfg(target_arch="wasm32")'.dependencies]
wasm-bindgen = "0.2"

[target.'cfg(target_arch="wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"


[features]
some_executor = ["dep:some_executor"]